--- a/Maratona-Discover/styles/styles.css
+++ b/Maratona-Discover/styles/styles.css
@@ -1,134 +1,128 @@
 /* Global ------------------------ */
 :root {
-    --dark-blue: #363f5f;
-    --light-green: #49aa26;
-    --income: #12a454;
-    --expense: #e92929;
+  --dark-blue: #363f5f;
+  --light-green: #49aa26;
+  --income: #12a454;
+  --expense: #e92929;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: #f0f2f5;
-    font-family: 'Poppins', sans-serif;
+  background: #f0f2f5;
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
-    width: min(90vw, 800px);
-    margin: auto;
+  width: min(90vw, 800px);
+  margin: auto;
 }
 
 /* Titles ------------------------ */
 h2 {
-    margin: 3.2rem 0 0.8rem;
-    color: var(--dark-blue);
+  margin: 3.2rem 0 0.8rem;
+  color: var(--dark-blue);
 
-    font-weight: 400;
+  font-weight: 400;
 }
 
 /* Header ------------------------ */
 header {
-    background: #2d4a22;
-    padding: 2rem 0 10rem;
-    text-align: center;
-}
-
-#logo {
-    color: #fff;
-    font-weight: 100;
+  background: #2d4a22;
+  padding: 2rem 0 10rem;
+  text-align: center;
 }
 
 /* Balance ------------------------ */
 #balance {
-    margin-top: -8rem;
+  margin-top: -8rem;
 }
 
 #balance h2 {
-    color: #fff;
-    margin-top: 0;
+  color: #fff;
+  margin-top: 0;
 }
 
 /* Cards ------------------------ */
 .card {
-    background: #fff;
-    padding: 1.5rem 2rem;
+  background: #fff;
+  padding: 1.5rem 2rem;
 
-    border-radius: .25rem;
-    margin-bottom: 2rem;
+  border-radius: 0.25rem;
+  margin-bottom: 2rem;
 
-    color: var(--dark-blue);
+  color: var(--dark-blue);
 }
 
 .card h3 {
-    font-weight: 400;
-    font-size: 1rem;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
 .card p {
-    font-size: 2rem;
-    line-height: 3rem;
+  font-size: 2rem;
+  line-height: 3rem;
 
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .card.total {
-    color: #fff;
-    background-color: var(--light-green);
+  color: #fff;
+  background-color: var(--light-green);
 }
 
 /* Table ------------------------ */
 #data-table {
-    width: 100%;
-    border-spacing: 0 0.5rem;
-    color: #969cb3;
+  width: 100%;
+  border-spacing: 0 0.5rem;
+  color: #969cb3;
 }
 
 table thead tr th:first-child,
 table tbody tr td:first-child {
-    border-radius: 0.25rem 0 0 0.25rem;
+  border-radius: 0.25rem 0 0 0.25rem;
 }
 
 table td,
-table th {    
-    padding: 1rem 2rem;
-    background-color: #fff;
-    font-weight: 400;
+table th {
+  padding: 1rem 2rem;
+  background-color: #fff;
+  font-weight: 400;
 }
 
-table th{
-    text-align: left;
+table th {
+  text-align: left;
 }
 
 table tbody tr {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 table tbody tr:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 td.description {
-    color: var(--dark-blue);
+  color: var(--dark-blue);
 }
 
 td.income {
-    color: var(--income)
+  color: var(--income);
 }
 
 td.expense {
-    color: var(--expense);
+  color: var(--expense);
 }
-
 
 /* Footer ------------------------ */
 footer {
-    text-align: center;
-    padding: 4rem 0 2rem;
-    color: var(--dark-blue);
+  text-align: center;
+  padding: 4rem 0 2rem;
+  color: var(--dark-blue);
 
-    opacity: 0.6;
+  opacity: 0.6;
 }
