--- a/Maratona-Discover/styles/styles.css
+++ b/Maratona-Discover/styles/styles.css
@@ -1,9 +1,11 @@
 /* Global ------------------------ */
 :root {
   --dark-blue: #363f5f;
-  --light-green: #49aa26;
+  --dark-green: #2d4a22;
+  --green: #49aa26;
+  --light-green: #3dd705;
   --income: #12a454;
-  --expense: #e92929;
+  --red: #e92929;
 }
 
 * {
@@ -12,9 +14,25 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 93.75% /* 15px */;
+}
+
 body {
   background: #f0f2f5;
   font-family: "Poppins", sans-serif;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 .container {
@@ -30,10 +48,61 @@ h2 {
   font-weight: 400;
 }
 
+/* Links & Buttons ------------------------ */
+a {
+  color: var(--green);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--light-green);
+}
+
+button {
+  width: 100%;
+  height: 50px;
+
+  border: none;
+  border-radius: 0.25rem;
+
+  color: #fff;
+  background: var(--green);
+
+  padding: 0;
+
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--light-green);
+}
+
+.button.new {
+  display: inline-block;
+  padding-bottom: 0.8rem;
+}
+
+.button.cancel {
+  color: var(--red);
+  border: 2px var(--red) solid;
+  border-radius: 0.25rem;
+
+  height: 50px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0.6;
+}
+.button.cancel:hover {
+  opacity: 1;
+}
+
 /* Header ------------------------ */
 header {
-  background: #2d4a22;
-  padding: 2rem 0 10rem;
+  background: var(--dark-green);
+  padding: 2rem 0 15rem;
   text-align: center;
 }
 
@@ -61,6 +130,10 @@ header {
 .card h3 {
   font-weight: 400;
   font-size: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card p {
@@ -72,10 +145,16 @@ header {
 
 .card.total {
   color: #fff;
-  background-color: var(--light-green);
+  background-color: var(--green);
 }
 
 /* Table ------------------------ */
+#transaction {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+}
+
 #data-table {
   width: 100%;
   border-spacing: 0 0.5rem;
@@ -85,6 +164,11 @@ header {
 table thead tr th:first-child,
 table tbody tr td:first-child {
   border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child {
+  border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table td,
@@ -115,7 +199,75 @@ td.income {
 }
 
 td.expense {
-  color: var(--expense);
+  color: var(--red);
+}
+
+/* Modal ------------------------ */
+.modal-overlay {
+  height: 100%;
+  width: 100%;
+
+  background-color: rgba(0, 0, 0, 0.7);
+
+  position: fixed;
+  top: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  visibility: hidden;
+  z-index: 10;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  background: #f0f2f5;
+  padding: 2.4rem;
+
+  position: relative;
+  z-index: 1;
+}
+
+/* Footer ------------------------ */
+#form {
+  max-width: 500px;
+}
+
+#form h2 {
+  margin-top: 0;
+}
+
+#form input {
+  border: none;
+  border-radius: 0.2rem;
+
+  padding: 0.8rem;
+  width: 100%;
+}
+
+#form .input-group {
+  margin-top: 0.8rem;
+}
+
+#form .input-group small {
+  opacity: 0.4;
+}
+
+#form .input-group.actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#form .input-group.actions .button,
+#form .input-group.actions button {
+  width: 48%;
 }
 
 /* Footer ------------------------ */
@@ -125,4 +277,17 @@ footer {
   color: var(--dark-blue);
 
   opacity: 0.6;
+}
+
+/* Responsive ------------------------ */
+@media screen and (min-width: 800px) {
+  html {
+    font-size: 87.5% /* 14px */;
+  }
+
+  #balance {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
 }
